created sweggar apis
